@@ -3,9 +3,6 @@ sudo:     false
 perl:
     - '5.22'
     - '5.20'
-    - '5.18'
-    - '5.16'
-    - '5.14'
 install:       cpanm -n --skip-satisfied Devel::Cover::Report::Coveralls HTTP::Server::Simple
 script:        PERL5OPT=-MDevel::Cover prove -lv t xt
 after_success: cover -report coveralls -select_re ^lib/
